# kube-subcontroller

./: Cargo.toml  README.md
src/: config.rs  lib.rs  runner.rs  subscriber.rs  tests.rs
src/config/: subcontroller.rs
src/subscriber/: objects.rs  types.rs
