[package]
name = "kube-subcontroller"
version = "0.1.0"
description = "Multi-subcontroller management by reacting to reflector"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/SOF3/kube-subcontroller"
keywords = ["kubernetes", "runtime", "reflector", "watcher", "controller"]
categories = ["web-programming::http-client", "caching", "network-programming"]
rust-version = "1.72"

[dependencies]
crossbeam = "0.8.4"
futures = "0.3.30"
kube-client = "0.88.1"
kube-core = "0.88.1"
kube-runtime = "0.88.1"
log = "0.4.20"
parking_lot = "0.12.1"
serde = { version = "1.0.196", default-features = false }
tokio = {version = "1.36.0", default-features = false}
tokio-util = "0.7.10"

[dev-dependencies]
k8s-openapi = {version = "0.21.0", features = ["v1_29"]}
